--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "../../public/fonts/font.css";
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+/* tailwindcss base styles */
+@import "tailwindcss/base";
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+/* tailwindcss component styles */
+@import "tailwindcss/components";
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
+/* tailwindcss utility styles */
+@import "tailwindcss/utilities";
