--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,29 @@
 
 /* tailwindcss utility styles */
 @import "tailwindcss/utilities";
+
+
+.footer {
+  @apply bg-dark text-white flex flex-col text-center font-quicksand pt-10 pb-10 pr-[10rem] pl-[10rem];
+    user-select: none;
+  }
+
+  /* styles.css or your global stylesheet */
+.d-shape-container {
+  border-top-left-radius: 100%; 
+}
+
+.d-shape-image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.rotate-upwards {
+  transform: rotate(-90deg);
+  transform-origin: center center; 
+  height: 100%; 
+  display: flex; 
+  align-items: center;
+  justify-content: center; 
+}
